# wheezy.web

./: .hgignore  .travis.yml  Makefile  README  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  release.yml  tests.yml
demos/api/: app.py  test_app.py
demos/guestbook/: Makefile  app.py  config.ini  config.py  guestbook.db  models.py  repository.py  schema.sql  urls.py  validation.py  views.py
demos/guestbook/static/: site.css  site.js
demos/guestbook/templates/: add.html  layout.html  list.html
demos/hello/: benchmark_hello.py  hello.py  helloworld.py  test_hello.py  test_helloworld.py
demos/public/: Makefile  development.ini
demos/public/i18n/: membership.po  validation.po
demos/public/src/: app.py  config.py  urls.py
demos/public/src/factory/: repository.py  service.py
demos/public/src/membership/: models.py  validation.py
demos/quickstart-empty/: MANIFEST.in  Makefile  development.ini  fabfile.py  pyproject.toml  setup.py
demos/quickstart-empty/content/: maintenance.html
demos/quickstart-empty/etc/: config.ini  development.ini  nginx.conf  sysctl.conf
demos/quickstart-empty/src/: config.py  factory.py  lockout.py  tracing.py  urls.py
demos/quickstart-empty/src/public/: __init__.py
demos/quickstart-i18n/: MANIFEST.in  Makefile  development.ini  fabfile.py  pyproject.toml  setup.py
demos/quickstart-i18n/etc/: config.ini  development.ini  nginx.conf
demos/quickstart-i18n/src/: app.py  config.py  factory.py  lockout.py  tracing.py  urls.py
demos/quickstart-i18n/src/public/: __init__.py
demos/reusable/hello/: MANIFEST.in  pyproject.toml  setup.py
demos/reusable/hello/src/: app.py  config.py  factory.py  urls.py
demos/reusable/world/: pyproject.toml  setup.py
demos/reusable/world/content/templates/hello/: welcome.html
demos/reusable/world/src/: app.py  config.py  factory.py  shared.py  urls.py
demos/template/: MANIFEST.in  Makefile  bench.sh  development.ini  fabfile.py  pyproject.toml  setup.py
demos/template/content/: maintenance.html
demos/template/content/static/js/: autocomplete.js  core.js
demos/template/content/templates-jinja2/membership/: signin.html  signup.html
demos/template/content/templates-jinja2/public/: about.html  home.html  http400.html  http403.html  http404.html  http500.html
demos/template/content/templates-jinja2/shared/: master.html
demos/template/content/templates-jinja2/shared/snippet/: menu-header.html  menu-locale.html  menu-signin.html  script.html
demos/template/content/templates-mako/membership/: signin.html  signup.html
demos/template/content/templates-mako/public/: about.html  home.html  http403.html
demos/template/content/templates-mako/shared/: master.html
demos/template/content/templates-mako/shared/snippet/: menu-header.html  menu-locale.html  menu-signin.html  script.html
demos/template/content/templates-preprocessor/membership/: signin.html  signup.html
demos/template/content/templates-preprocessor/public/: about.html  home.html  http400.html  http403.html  http404.html  http500.html
demos/template/content/templates-preprocessor/shared/: master.html
demos/template/content/templates-preprocessor/shared/snippet/: menu-header.html  menu-signin.html
demos/template/content/templates-tenjin/membership/: signin.html  signup.html
demos/template/content/templates-tenjin/public/: about.html  home.html  http400.html  http403.html  http404.html  http500.html
demos/template/content/templates-tenjin/shared/: master.html
demos/template/content/templates-tenjin/shared/snippet/: menu-header.html  menu-locale.html  menu-signin.html  script.html
demos/template/content/templates-wheezy/membership/: signin.html  signup.html
demos/template/content/templates-wheezy/preprocessor/membership/: signup.html
demos/template/content/templates-wheezy/preprocessor/shared/: master.html
demos/template/content/templates-wheezy/preprocessor/shared/snippet/: menu-header.html  script.html
demos/template/content/templates-wheezy/public/: about.html  home.html
demos/template/content/templates-wheezy/shared/: master.html
demos/template/content/templates-wheezy/shared/snippet/: menu-header.html  menu-locale.html  menu-signin.html  script.html
demos/template/content/templates/public/: http400.html  http404.html  http500.html
demos/template/content/templates/shared/snippet/: version.html
demos/template/etc/: config.ini  development.ini  memcached.conf  nginx.conf
demos/template/i18n/: membership.po  shared.po
demos/template/i18n/en/LC_MESSAGES/: membership.po  public.po
demos/template/i18n/ru/LC_MESSAGES/: membership.po  public.po  shared.po  validation.po
demos/template/src/: app.py  config.py  factory.py  lockout.py  tracing.py  urls.py
demos/template/src/membership/: models.py  rules.py  validation.py
demos/template/src/membership/repository/: caching.py  contract.py  keys.py  mock.py  samples.py
demos/template/src/membership/service/: bridge.py  contract.py
demos/template/src/membership/service/tests/: test_bridge.py
demos/template/src/membership/web/: profile.py  urls.py  views.py
demos/template/src/membership/web/tests/: benchmark_views.py  test_validation.py  test_views.py
demos/template/src/public/web/: profile.py  urls.py  views.py
demos/template/src/public/web/tests/: benchmark_views.py  test_views.py
demos/template/src/shared/: authorization.py
doc/: conf.py  examples.rst  gettingstarted.rst  index.rst  modules.rst  tutorial.rst  userguide.rst
requirements/: dev-py2.txt  dev-py3.txt  dev.in  dev.txt  docs.txt
src/wheezy/web/: __init__.py  app.py  authorization.py  caching.py  comp.py  templates.py  transforms.py
src/wheezy/web/handlers/: __init__.py  base.py  file.py  method.py  template.py
src/wheezy/web/middleware/: __init__.py  bootstrap.py  errors.py  routing.py
(+77 files in other folders)
