[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheezy.web"
dynamic = ["version"]
description = "A lightweight, high performance, high concurrency WSGI web framework with the key features to build modern, efficient web"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andriy Kornatskyy", email = "andriy.kornatskyy@live.com" }]
keywords = [
  "wsgi",
  "web",
  "handler",
  "static",
  "template",
  "mako",
  "tenjin",
  "jinja2",
  "routing",
  "middleware",
  "caching",
  "transforms",
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "wheezy.core>=3.2.3",
  "wheezy.caching>=3.2.1",
  "wheezy.html>=3.2.1",
  "wheezy.http>=3.2.3",
  "wheezy.routing>=3.2.1",
  "wheezy.security>=3.2.2",
  "wheezy.validation>=3.2.1",
]

[project.optional-dependencies]
cython = ["Cython>=3.0", "setuptools>=61.0"]
mako = ["mako>=1.3.10"]
tenjin = ["tenjin>=1.1.1"]
jinja2 = ["jinja2>=3.1.6"]
"wheezy.template" = ["wheezy.template>=3.2.5"]

[project.urls]
Homepage = "https://github.com/akornatskyy/wheezy.web"
Source = "https://github.com/akornatskyy/wheezy.web"
Issues = "https://github.com/akornatskyy/wheezy.web/issues"

[tool.setuptools]
packages = ["wheezy.web", "wheezy.web.handlers", "wheezy.web.middleware"]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

# [tool.setuptools.package-data]
# "wheezy.web" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "wheezy.web.__version__" }

[tool.coverage.run]
source = ["src/wheezy/web"]
omit = ["*/test_*.py", "*/tests/*"]
